--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.14",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^18.11.9",
     "@types/socket.io": "^3.0.2",
     "ts-node-dev": "^2.0.0",
@@ -18,6 +19,7 @@
   },
   "dependencies": {
     "express": "^4.18.2",
+    "mongoose": "^6.7.4",
     "socket.io": "^4.5.4"
   }
 }
