--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   "dependencies": {
     "express": "^4.18.2",
     "mongoose": "^6.7.4",
-    "socket.io": "^4.5.4"
+    "reflect-metadata": "^0.1.13",
+    "socket.io": "^4.5.4",
+    "tsyringe": "^4.7.0"
   }
 }
